[gd_scene load_steps=8 format=3 uid="uid://grjnehirstak"]

[ext_resource type="Script" path="res://src/main/scene/level/dogge/dogge_main.gd" id="1_7kd62"]
[ext_resource type="Texture2D" uid="uid://bpccqqlute1fn" path="res://src/main/assets/texture/background/bg_sky.png" id="1_sdp8r"]
[ext_resource type="Texture2D" uid="uid://jiy77tnambah" path="res://src/main/assets/texture/bullet/ice_particle_white.png" id="2_vs380"]
[ext_resource type="AudioStream" uid="uid://brdjeu13gygc0" path="res://src/main/assets/texture/dogge/art/House In a Forest Loop.ogg" id="3_qjgqs"]
[ext_resource type="PackedScene" uid="uid://b8dgjyf6e0dqd" path="res://src/main/scene/level/dogge/player.tscn" id="4_glndn"]
[ext_resource type="PackedScene" uid="uid://tvooalqdnr6" path="res://src/main/scene/level/dogge/hud.tscn" id="6_emlwd"]

[sub_resource type="Curve2D" id="Curve2D_coww8"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -2, 1, 0, 0, 0, 0, -2, 718, 0, 0, 0, 0, 959, 718, 0, 0, 0, 0, 958, -2, 0, 0, 0, 0, 1, 0)
}
point_count = 5

[node name="DoggeMain" type="Node2D"]
script = ExtResource("1_7kd62")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(480, 360)
texture = ExtResource("1_sdp8r")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_coww8")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(-2, 1)
rotation = 1.5708

[node name="Sprite2D" type="Sprite2D" parent="Path2D/PathFollow2D"]
texture = ExtResource("2_vs380")

[node name="MonTimer" type="Timer" parent="."]

[node name="BgMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qjgqs")
autoplay = true

[node name="Player" parent="." instance=ExtResource("4_glndn")]
position = Vector2(480, 360)

[node name="HUD" parent="." instance=ExtResource("6_emlwd")]

[connection signal="timeout" from="MonTimer" to="." method="_on_mon_timer_timeout"]
[connection signal="game_over" from="Player" to="." method="_on_player_game_over"]
[connection signal="game_start" from="HUD" to="." method="_on_hud_game_start"]
